--- a/DotVVM.Framework.SmartRendering/DotVVM.Framework.SmartRendering.csproj
+++ b/DotVVM.Framework.SmartRendering/DotVVM.Framework.SmartRendering.csproj
@@ -89,8 +89,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ControlAnalyzer.cs" />
+    <Compile Include="ControlBehaviour.cs" />
     <Compile Include="DotvvmSpecialExecutors.cs" />
+    <Compile Include="Ext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderedOutput.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
