--- a/SymbolicInterpreter/SymbolicInterpreter.csproj
+++ b/SymbolicInterpreter/SymbolicInterpreter.csproj
@@ -56,6 +56,7 @@
     <Compile Include="MyParameterExpression.cs" />
     <Compile Include="PrefixTracker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionHelper.cs" />
     <Compile Include="StackConversion.cs" />
     <Compile Include="SymbolicExecutor.cs" />
     <Compile Include="SymExecResult.cs" />
