implemented translation to renderedOutput objects

--- a/DotVVM.Framework.SmartRendering/DotVVM.Framework.SmartRendering.csproj
+++ b/DotVVM.Framework.SmartRendering/DotVVM.Framework.SmartRendering.csproj
@@ -94,6 +94,8 @@
     <Compile Include="Ext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RenderedOutput.cs" />
+    <Compile Include="ResultExpressionSimplifiingVisitor.cs" />
+    <Compile Include="ResultHelperFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
